# fagdag-kubernetes

./: README.md
cheatsheat/: README.md
cheatsheat/deployment/: deployment.yml
colour-service/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.linux  README.md  buildlinux.sh
colour-service/k8s/: deployment.yaml
colour-service/src/: main.rs  remote.rs
colour-service/static/templates/: index.html
k8s-demo-pod/: Dockerfile  README.md  app.js  docker-build.sh  package-lock.json  package.json
k8s-demo-pod/public/: index.html
oppgaver/oppgave-1/: README.md  deployment-1.yml  deployment-2.yml  deployment-3.yml
oppgaver/oppgave-1/fasit/: README.md  deployment.yml
oppgaver/oppgave-2/: README.md  deployment-4.yml
oppgaver/oppgave-3/: README.md  deployment-5.yml  deployment-6.yml
oppgaver/oppgave-4/: README.md  deployment-6.yml  deployment-blue-1.yml  deployment-green-1.yml  deployment-green-2.yml  deployment-ingress-1.yml  deployment-ingress-2.yml
oppgaver/oppgave-5/: README.md
