[package]
name = "colour-service"
version = "0.1.0"
authors = ["Dag Østgulen Heradstveit <dagherad@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "3.3.2"
rand = "0.8.3"
log = "0.4.14"
env_logger = "0.8.3"
serde = "1.0.123"
serde_json = "1.0.62"
handlebars = { version = "3.5.2", features = ["dir_source"] }